--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.2.3",
     "material-icons": "^1.10.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
