--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "material-icons": "^1.10.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-js-stickynav": "^1.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.3",
